...

                <EditText
                    android:id="@+id/etTitleSetting"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                <TextView
                    android:id="@+id/tvErrorGenderSetting"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                <TextView
                    android:id="@+id/tvErrorTitleSetting"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

            <EditText
                android:id="@+id/etFirstNameSetting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...
                android:ems="10"
                android:fontFamily="sans-serif-light"
                android:hint="John"
                android:inputType="textPersonName"
                android:padding="10dp" />

            <TextView
                android:id="@+id/tvErrorFirstNameSetting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

            <EditText
                android:id="@+id/etLastNameSetting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...
                android:ems="10"
                android:fontFamily="sans-serif-light"
                android:hint="Doe"
                android:inputType="textPersonName"
                android:padding="10dp" />

            <TextView
                android:id="@+id/tvErrorLastNameSetting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

                <EditText
                    android:id="@+id/etPhoneNumberSetting"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                <TextView
                    android:id="@+id/tvErrorPhonePrefixSetting"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                <TextView
                    android:id="@+id/tvErrorPhoneNumberSetting"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                <EditText
                    android:id="@+id/etPostCodeSetting"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                <EditText
                    android:id="@+id/etCitySetting"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...
                    android:ems="10"
                    android:fontFamily="sans-serif-light"
                    android:hint="Graz"
                    android:inputType="textPersonName"
                    android:padding="10dp" />
...

                <TextView
                    android:id="@+id/tvErrorPostCodeSetting"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                <TextView
                    android:id="@+id/tvErrorCitySetting"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

            <EditText
                android:id="@+id/etStreetSetting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/tvErrorStreetSetting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/tvErrorUsernameSetting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

            <Button
                android:id="@+id/btnChangePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

            <Button
                android:id="@+id/btnSaveChangesSetting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...
