...
    <string name="settings">Settings</string>
    <string name="save_changes">Save Changes</string>
    <string name="change_password">Change Password</string>
    <string name="oldPassword">Old Password</string>
    <string name="newPassword">New Password</string>
    <string name="failed_update_password">Update Password failed! Try again!</string>
    <string name="update_settings_succeeded">Profile successfully updated</string>
    <string name="update_password_succeeded">Password successfully updated</string>




    <string-array name="genders">
...
    <string name="bluetooth_device">Bluetooth Device</string>
    <string name="save_tracking">Save Tracking</string>
    <string name="back">Back</string>
    <string name="some_notes">Some notes</string>
    <string name="work">Work</string>
    <string name="error_company_exists">Company with this name already exists</string>
    <string name="no_number_title">The title must not contain numbers</string>
    <string name="first_name_required">The first name is required</string>
    <string name="first_name_length">The first name must be between 2 and 255 characters</string>
    <string name="first_name_no_numbers">The first name must not contain numbers</string>
    <string name="company_name_required">The company name is required</string>
    <string name="company_name_length">The company name must be between 2 and 255 characters</string>
    <string name="position_required">The position is required</string>
    <string name="position_name_length">The position must be between 2 and 255 characters</string>
    <string name="position_name_no_numbers">The position must not contain numbers</string>
    <string name="last_name_required">The last name is required</string>
    <string name="last_name_length">The last name must be between 2 and 255 characters</string>
    <string name="last_name_no_numbers">The last name must not contain numbers</string>
    <string name="email_length">The email must be between 5 and 255 characters</string>
    <string name="email_valid_address">The email must be a valid email address</string>
    <string name="dob_required">The date of birth is required</string>
    <string name="dob_format">The date of birth must be of format DD.MM.YYYY</string>
    <string name="phone_prefix_required">The phone prefix is required</string>
    <string name="phone_prefix_digits">The phone prefix must only contain digits</string>
    <string name="phone_prefix_length">The phone prefix must be between 2 and 3 digits</string>
    <string name="phone_nr_required">The phone number is required</string>
    <string name="phone_number_digits">The phone number must only contain digits</string>
    <string name="phone_number_length">The phone number must be between 2 and 12 digits</string>
    <string name="post_code_required">The post code is required</string>
    <string name="post_code_length">The post code must be between 4 and 10 characters</string>
    <string name="city_required">The city is required</string>
    <string name="city_name_format">The city must not contain numbers</string>
    <string name="city_name_length">The city must be between 2 and 255 characters</string>
    <string name="street_required">The street is required</string>
    <string name="street_name_format">The street must contain a street name and a street number</string>
    <string name="username_required">The username is required</string>
    <string name="pw_required">The password is required</string>
    <string name="pw_length">The password must have at least 8 characters</string>
    <string name="email_required">The email is required</string>
    <string name="error_adding_employee">Could not add employee</string>
    <string name="success_adding_employee">Employee has been added successfully</string>
...
